CMF 1.5.1beta (unreleased)

  New Features

    - CatalogTool: All default FieldIndex instances used for indexing
      DateTime values are now created as DateIndex instances instead. All
      default TextIndex instances are now created as ZCTextIndex instances.
      (CMF collector issues http://www.zope.org/Collectors/CMF/191 and
      http://www.zope.org/Collectors/CMF/302)

    - CMFSetup: Improved 'skip purge' behavior of the skins import handler.
      If purging is disabled, it's now possible to modify existing skin
      configurations. You can use '*' as wildcard for skin-path ids and a
      'insert-before' attribute to specify where to insert a new layer.

    - CMFSetup tool: Improved 'Properties' tab.
      The active site configuration can now be selected from a list of
      registered profiles and stored snapshots.
      (http://collector.zope.org/CMF/264)

    - CMFSetup: Added handlers for site properties.

    - CMFSetup utils: Added 'ConfiguratorBase' class.
      It's now recommended to use this class as base for all configurators.
      The class includes some generic methods to handle subobjects and
      properties.

    - FSObject: Now FSObject-derived items like FSImage or FSFile can have 
      security declarations inside the metadata file.
      (http://collector.zope.org/CMF/289)

    - profiles: Moved 'default' profile to CMFDefault.
      Using the new 'importVarious' handler this profile now allows to create
      CMF sites identical to those created with manage_addCMFSite. 

    - CMFDefault: Added 'importVarious' setup handler.
      This provisional handler will be removed again as soon as full handlers
      are implemented for these steps.

    - CachePolicyManager: You can now set a ETag using a TALES expression
      (http://collector.zope.org/CMF/236) 

    - RegistrationTool: The regular expression that limits what people
      can put in as a valid member ID is now configurable TTW in the